added strong and mark element to p content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>The finest whiskeys delivered to your doorstep.</h1>
         <p>
           Sign up today to start receiving the world's best whiskeys every
-          month. First one is free!
+          month. <strong><mark>First one is free!</mark></strong>
         </p>
       </section>
       <!-- /.callout -->
