--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <!-- Callout -->
       <section class="callout">
         <h1>The finest whiskeys delivered to your doorstep.</h1>
-        <p>
+        <p class="lead">
           Sign up today to start receiving the world's best whiskeys every
-          month. <strong><mark>First one is free!</mark></strong>
+          month. <s>£19.99</s><strong><mark>First one is free!</mark></strong>
         </p>
       </section>
       <!-- /.callout -->
