--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           Sign up today to start receiving the world's best whiskeys every
           month. <s>£19.99</s><strong><mark>First one is free!</mark></strong>
         </p>
+        <p>
+          <small
+            >You must be over 18 to sign up for our service. Please drink
+            responsible.</small
+          >
+        </p>
       </section>
       <!-- /.callout -->
       <hr />
