--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Sign up today to start receiving the world's best whiskeys every
           month. <s>£19.99</s><strong><mark>First one is free!</mark></strong>
         </p>
-        <p>
+        <p class="text-muted">
           <small
             >You must be over 18 to sign up for our service. Please drink
             responsible.</small
