--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
       <!-- Quotes -->
       <section class="quotes">
         <h2 class="text-uppercase">Quotes:</h2>
-        <div class="quote">
+        <blockquote class="quote">
           <p>
             I've been introduced to more than 10 great international whiskeys I
             never knew about.
           </p>
           <p>- Jane Doe</p>
-        </div>
-        <div class="quote">
+        </blockquote>
+        <blockquote class="quote">
           <p>I haven't been sober for months!</p>
           <p>- Jane Doe</p>
-        </div>
+        </blockquote>
       </section>
       <!-- /.quotes -->
       <hr />
 
       <!-- Features -->
       <section class="features">
-        <h2>Features:</h2>
+        <h2 class="text-uppercase">Features:</h2>
         <div class="feature">
           <h3>Feature 1</h3>
           <p>
