--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       <!-- Quotes -->
       <section class="quotes">
         <h2 class="text-uppercase">Quotes:</h2>
-        <blockquote class="quote">
+        <blockquote class="blockquote">
           <p>
             I've been introduced to more than 10 great international whiskeys I
             never knew about.
           </p>
           <p>- Jane Doe</p>
         </blockquote>
-        <blockquote class="quote">
+        <blockquote class="blockquote">
           <p>I haven't been sober for months!</p>
           <p>- Jane Doe</p>
         </blockquote>
