--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
+          <p><a href="" class="btn btn-sm btn-light">Read More</a></p>
         </div>
         <div class="feature">
           <h3>Feature 2</h3>
@@ -74,6 +75,7 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
+          <p><a href="" class="btn btn-sm btn-light">Read More</a></p>
         </div>
         <div class="feature">
           <h3>Feature 3</h3>
@@ -83,6 +85,7 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
+          <p><a href="" class="btn btn-sm btn-light">Read More</a></p>
         </div>
       </section>
       <!-- /.features -->
