added a new bootstrap table with name origin heading

--- a/index.html
+++ b/index.html
@@ -89,6 +89,31 @@
         </div>
       </section>
       <!-- /.features -->
+
+      <section class="monthly-favourites">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">name</th>
+              <th scope="col">origin</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td colspan="2">Larry the Bird</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </article>
 
     <!--    bootstrap javascript cdn link-->
