--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/a254ad7cf6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
