--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
       <!--</div>-->
     </nav>
     <article class="container mt-3">
+      <div class="row d-none d-sm-block">
+        <div class="col-12">
+          <div class="alert alert-warning">
+            <strong>Sale now on!</strong> We've got a sale on. Get a 12-month
+            subscription for the month of 6!
+            <a href="">See here for details!</a>
+          </div>
+        </div>
+      </div>
       <!-- Callout -->
       <div class="row">
         <div class="col-12">
@@ -130,7 +139,10 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 1</h3>
+              <h3>
+                <i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1
+                <span class="badge badge-success">NEW!</span>
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -142,7 +154,10 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 2</h3>
+              <h3>
+                <i class="fa-solid fa-credit-card d-none d-sm-inline"></i>
+                Feature 2
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -154,7 +169,10 @@
           </div>
           <div class="col-12 d-md-none d-lg-block col-lg-4">
             <div class="feature">
-              <h3>Feature 3</h3>
+              <h3>
+                <i class="fa-solid fa-circle-xmark d-none d-sm-inline"></i>
+                Feature 3
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
