added items to Whiskeys dropdown menu

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
               aria-expanded="false"
               >Whiskeys</a
             >
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Irish</a>
+              <a class="dropdown-item" href="#">Scotch</a>
+              <a class="dropdown-item" href="#">Japanese</a>
+              <a class="dropdown-item" href="#">American</a>
+            </div>
           </li>
         </ul>
       </div>
