added google fonts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       src="https://kit.fontawesome.com/a254ad7cf6.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -69,6 +74,7 @@
       </div>
       <!--</div>-->
     </nav>
+
     <article class="container mt-3">
       <div class="row d-none d-sm-block">
         <div class="col-12">
